k8s/app/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: app
  annotations:
    linkerd.io/inject: enabled
    config.linkerd.io/default-inbound-policy: deny
