k8s/app/backend.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: app
  name: app
  labels:
    app: app
spec:
  ports:
    - name: peculiar
      port: 80
      targetPort: 8080
    - name: common
      port: 8888
  selector:
    app: app
    tier: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: app
  name: app-deployment
  labels:
    app: app
spec:
  selector:
    matchLabels:
      app: app
      tier: backend
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: app
        tier: backend
        # for linkerd sidecar
        allowPrivilegedLevelCapabilities: "true"
        allowRunAsRoot: "true"
        allowBaselineLevelSeccompTypes: "true"
        allowBaselineLevelCapabilities: "true"
    spec:
      containers:
        - image: backend@sha256:unknown
          name: app
          ports:
            - containerPort: 8080
              name: app
          command: ["main", "app", "-d"]
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8888
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8888
          startupProbe:
            httpGet:
              path: /healthz
              port: 8888
            initialDelaySeconds: 3
            periodSeconds: 3
          securityContext:
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 65532 # nonroot
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
      imagePullSecrets:
        - name: registry-key
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
---
apiVersion: v1
kind: Service
metadata:
  namespace: app
  name: auth
  labels:
    app: auth
spec:
  ports:
    - name: peculiar
      port: 80
      targetPort: 8080
    - name: common
      port: 8888
  selector:
    app: auth
    tier: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: app
  name: auth-deployment
  labels:
    app: auth
spec:
  selector:
    matchLabels:
      app: auth
      tier: backend
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: auth
        tier: backend
        # for linkerd sidecar
        allowPrivilegedLevelCapabilities: "true"
        allowRunAsRoot: "true"
        allowBaselineLevelSeccompTypes: "true"
        allowBaselineLevelCapabilities: "true"
    spec:
      containers:
        - image: backend@sha256:unknown
          name: auth
          ports:
            - containerPort: 8080
              name: auth
          command: ["main", "auth", "-d"]
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8888
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8888
          startupProbe:
            httpGet:
              path: /healthz
              port: 8888
            initialDelaySeconds: 3
            periodSeconds: 3
          securityContext:
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 65532 # nonroot
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
      imagePullSecrets:
        - name: registry-key
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
