k8s/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: public
  namespace: app
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - example.com
      secretName: cert-secret
  rules:
    - http:
        paths:
          - path: /api/v1/sessions
            pathType: Prefix
            backend:
              service:
                name: auth
                port:
                  number: 80
          - path: /api/v1/public
            pathType: Prefix
            backend:
              service:
                name: app
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: private
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/auth-url: http://auth.app.svc.cluster.local/api/v1/sessions
    nginx.ingress.kubernetes.io/auth-response-headers: x-auth
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - example.com
      secretName: cert-secret
  rules:
    - http:
        paths:
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: app
                port:
                  number: 80
