k8s/app/authz-policy.yaml
---
apiVersion: policy.linkerd.io/v1beta1
kind: HTTPRoute
metadata:
  namespace: app
  name: backend-api-routes
spec:
  parentRefs:
    - group: policy.linkerd.io
      kind: Server
      name: backend-services
  rules:
    - matches:
      - path:
          value: /api
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  namespace: app
  name: ingress-policy
spec:
  targetRef:
    group: policy.linkerd.io
    kind: HTTPRoute
    name: backend-api-routes
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: MeshTLSAuthentication
      namespace: ingress
      name: ingress
